--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,8 +1,8 @@
 # your domain
-domain: example.com
+domain: freedaili.cf
 
 # database url
-database_url: ""
+database_url: "https://raw.githubusercontent.com/chen2021-web/proxypool/master/config/source.yaml"
 
 # cloudflare api
 cf_email: ""
@@ -13,4 +13,4 @@ source-files:
   # use local file
   - source.yaml
   # use web file
-  - https://example.com/source.yaml
+  - https://raw.githubusercontent.com/chen2021-web/proxypool/master/config/source.yaml
